cmake_minimum_required(VERSION 3.10)
project(CloudTracker)

set(CMAKE_CXX_STANDARD 17)

include_directories(include)

add_subdirectory(src/linker)
add_subdirectory(src/matcher)

cmake_minimum_required(VERSION 3.10)
project(CloudTracker)

set(CMAKE_CXX_STANDARD 17)

include_directories(include)

add_subdirectory(src/linker)
add_subdirectory(src/matcher)